# claude-status-line

./: CLAUDE.md  Cargo.toml  README.md  justfile  statusline.sh.example
.github/workflows/: ci.yml  release.yml
src/: main.rs
